# leaky-bucket-lite

./: Cargo.toml  README.md
examples/: simple.rs
src/: lib.rs  sync.rs  sync_threadsafe.rs  tokio.rs
tests/: basic.rs  discord.rs  issue5.rs  test_ao_issue.rs  test_ao_issue_sync.rs  test_next_refill.rs  test_overflow.rs  test_rate_limit_target.rs  test_tokens.rs  try_acquire.rs  wakeups.rs
