[package]
name = "leaky-bucket-lite"
version = "0.3.0"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Gelbpunkt/leaky-bucket-lite"
homepage = "https://github.com/Gelbpunkt/leaky-bucket-lite"
documentation = "https://docs.rs/leaky-bucket-lite"
description = """
Slimmed down, lazy futures-aware rate limiter implementation.
"""
categories = ["algorithms", "network-programming", "concurrency"]

[dependencies]
tokio = { version = "1", default-features = false, features = ["time", "sync"], optional = true }

[features]
default = ["tokio"]
sync = []

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
