[package]
name = "leaky-bucket-lite"
version = "0.5.2"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Gelbpunkt/leaky-bucket-lite"
homepage = "https://github.com/Gelbpunkt/leaky-bucket-lite"
documentation = "https://docs.rs/leaky-bucket-lite"
description = """
Slimmed down, lazy futures-aware rate limiter implementation.
"""
categories = ["algorithms", "network-programming", "concurrency"]

[dependencies]
parking_lot = { version = "0.12", default-features = false, optional = true }
tokio = { version = "1", default-features = false, features = ["time", "sync"], optional = true }

[features]
default = ["tokio"]
sync = []
sync-threadsafe = []

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }

[[test]]
name = "issue5"
required-features = ["sync-threadsafe"]

[[test]]
name = "test_ao_issue"
required-features = ["sync-threadsafe"]

[[test]]
name = "test_overflow"
required-features = ["sync-threadsafe"]

[[test]]
name = "test_rate_limit_target"
required-features = ["sync-threadsafe"]

[[test]]
name = "test_tokens"
required-features = ["sync-threadsafe"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
